Module 9/m09a06vending2-handout/grading/2024-11-07-16-40-52/compile.err
TestUtils.java:70: error: cannot find symbol
            var result = m.serveChocolates(n);
                          ^
  symbol:   method serveChocolates(int)
  location: variable m of type AdvancedVendingMachine
TestUtils.java:82: error: cannot find symbol
            var result = m.serveWienerMelanges(n);
                          ^
  symbol:   method serveWienerMelanges(int)
  location: variable m of type AdvancedVendingMachine
2 errors
